Updated index and css

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Path to Success</title>
-    <meta name="description" content="Unlock your full potential with personalized life coaching." />
+    <meta name="description" content="Unlock your full potential with personalized life coaching.">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -121,10 +121,10 @@
             <section id="why-choose-us">
                 <h2>Why Choose Us</h2>
                 <article id="why-choose-us-options">
-                    <div class="why-choose-option" id="why-choose-option-approach">Personalized Approach</div>
-                    <div class="why-choose-option" id="why-choose-option-results">Proven Results</div>
-                    <div class="why-choose-option" id="why-choose-option-environment">Supportive Environment</div>
-                    <div class="why-choose-option" id="why-choose-option-flexibility">Flexible Options</div>
+                    <div class="why-choose-option" id="why-choose-option-approach"><h4>Personalized Approach</h4></div>
+                    <div class="why-choose-option" id="why-choose-option-results"><h4>Proven Results</h4></div>
+                    <div class="why-choose-option" id="why-choose-option-environment"><h4>Supportive Environment</h4></div>
+                    <div class="why-choose-option" id="why-choose-option-flexibility"><h4>Flexible Options</h4></div>
                 </article>
             </section>
 
